--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,14 +15,28 @@ html {
   #eee;
 }
 
-header aside {
+/* Scroll to top shortcut */
+#btnScrollToTop{
   position: fixed;
-  right: 0;
-  top: 25vh;
-  display: flex;
-  flex-direction: column;
+  right: 10px;
+  bottom: 12px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  padding-left: 2px;
+  background: #B4008C;
+  color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
+#btnScrollToTop:active {
+  background: #393e46;
+}
+
+/* end scroll to to top shortcut */
 
 .grid {
   display: grid;
