--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,14 +3,17 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  /* font-family: Stanley;
+  src: url(fonts/stanley.otf); */
+}
+
 main {
   background:
   #393e46;
   color: #fff;
   font-family: "Rubik", Serif;
 }
-
-
 
 /* Scroll to top shortcut */
 #btnScrollToTop{
@@ -36,18 +39,31 @@ main {
 /* end scroll to to top shortcut */
 
 #name {
-  transform: rotate(-90deg);
-  position: fixed;
-  right: 10px;
-  top: 0;
-  margin-top: 76px;
-  background-color: #B4008C;
+/* transform: rotate(90deg); */
+position: fixed;
+left: 0px;
+top: 40px;
+background-color: #B4008C;
+font-family: "Source Code Pro", sans-serif;
+padding: 3px;
+width: 40px;
+height: 90px;
 }
+
+#name a {
+  padding: 10px 5px;
+
+}
+
+#name svg {
+  margin-top: 10px;
+}
+
 
 .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 10vw 1fr 1fr ;
-  grid-template-rows: 50px 1fr 1fr 50px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 15px 10px;
   width: 90%;
   margin: 0 auto;
@@ -56,12 +72,20 @@ main {
 
 .title {
   font-size: 3em;
-  grid-row: 2;
+  grid-row: 1 / span 2;
   grid-column: 1 / span 2;
   text-shadow: -10px 3px black;
+  align-self: center;
+}
+#about {
+  font-family: "Source Code Pro", sans-serif;
+  font-size: 1.5em;
+  grid-column: 3 / span 2;
+  grid-row: 2 / span 3;
+  align-self: center;
 }
 
-.procon {
+/* .procon {
   font-size: 1.8em;
   grid-row-start: 3;
   grid-column-start: 1;
@@ -77,10 +101,9 @@ main {
 }
 
 .projects a:hover, .contact:hover {
-
   box-shadow: inset 0 -0.4em 0 0 #B4008C;
   cursor: pointer;
-}
+} */
 
 #reveal {
   font-size: 1.5rem;
@@ -100,13 +123,16 @@ main {
   color: #fff;
 }
 
-#about {
-  font-family: "Source Code Pro", sans-serif;
-  font-size: 1.5em;
-  grid-column-start: 3;
-  grid-column-end: 6;
-  grid-row-start: 3;
-  grid-row-end: 4;
+
+#about a {
+  text-decoration: none;
+  color: #fff;
+  box-shadow: inset 0 -0.2em 0 0 #B4008C;
+  transition: .3s ease-out;
+}
+
+#about a:hover {
+  box-shadow: inset 0 -0.5em 0 0 #B4008C;
 }
 
 .section-2 {
@@ -125,8 +151,12 @@ main {
   line-height: 30px;
   background-color: #eee;
   color: #393e46;
+  margin: 0 auto;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 90%;
+  margin-bottom: 50px;
 }
-
 
 .firstview h2 {
   width: 100%;
@@ -153,20 +183,20 @@ main {
 }
 
 
-img:first-of-type {
-  width: 60%;
+img {
+  width: 65%;
   padding-left: 0;
-  margin-right: 40px;
-  margin-bottom: 50px;
+  /* margin-right: 40px;
+  margin-bottom: 50px; */
   box-shadow: 0px 0px 12px rgb(90,90,90);
   border-radius: 2px;
-  transition: .6s ease-out;
-  transition-delay: .3s;
+  /* transition: .6s ease-out;
+  transition-delay: .3s; */
 }
 
-img:hover {
+/* img:hover {
   width: 70%;
-}
+} */
 
 ul {
   margin-bottom: 10px;
@@ -178,11 +208,13 @@ ul {
   font-family: "Source Code Pro", sans-serif;
   font-size: 18px;
 }
+.firstview  article {
+  line-height: 35px;
+}
 
 footer {
   background: #393e46;
 }
-
 
 @media (max-width: 700px){
   .title{
@@ -224,16 +256,12 @@ footer {
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
-
-  }
-
-  .section-2 > article  {
-    line-height: 50px;
   }
   .firstview {
     margin: 0 auto;
     width: 90%;
   }
+
   .firstview h2 {
     padding-top: 30px;
     justify-content: center;
