--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@
 
 main {
   background:
-  #393e46;
+  #2e383f;
   color: #fff;
   font-family: "Rubik", Serif;
 }
@@ -199,7 +199,7 @@ img {
   padding-left: 0;
   /* margin-right: 40px;
   margin-bottom: 50px; */
-  box-shadow: 0px 0px 12px rgb(90,90,90);
+  box-shadow: 0px 0px 12px #2e383f;
   border-radius: 2px;
   /* transition: .6s ease-out;
   transition-delay: .3s; */
