--- a/stylesheet.css
+++ b/stylesheet.css
@@ -95,7 +95,7 @@ header {
   align-self: start;
 }
 
-section:nth-of-type(2) {
+section:nth-of-type(even) {
   padding: 50px 0px;
   display: flex;
   flex-direction: column;
